Fixing UI on mobile screen + Copying animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,7 +525,14 @@ input::selection {
 }
 
 .id-card {
-cursor: grabbing;  text-decoration: none;
+  cursor: grabbing;
+  text-decoration: none;
+}
+
+@keyframes copying {
+  to {
+    color: #39b385;
+  }
 }
 
 .right-about {
@@ -779,7 +786,7 @@ p:nth-child(2) .sta-amount {
     margin: 2% 0;
   }
 
-  .id-card{
+  .id-card {
     display: block;
   }
 
@@ -821,6 +828,7 @@ p:nth-child(2) .sta-amount {
 
   .tools {
     width: 100%;
+    height: 150px;
     border-radius: 0;
   }
 
@@ -848,6 +856,11 @@ p:nth-child(2) .sta-amount {
   .statistics-right {
     padding-top: 5px;
     border-top: 1px solid var(--primary-color);
+  }
+  .timer {
+    display: block;
+    text-align: center;
+    margin-bottom: 25px;
   }
 }
 
@@ -879,7 +892,7 @@ p:nth-child(2) .sta-amount {
 
   .panel-statistics {
     flex-direction: column;
-    height: 100%;
+    height: 10%;
   }
 
   .statistics-left {
